--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
+    "react-tabs": "^6.0.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
